--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
    <article>
        <h1>These page is for presentation purposes</h1>
        <aside>Git Commands</aside>
+       <iframe src="../pictures/github.png" width="100%" height="600" frameborder="0"></iframe>
    </article>
 
 <!-- Add footer -->
