changes in css , add icon for About me

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#about-me">About Me</a>
+                    <a class="nav-link" href="#"><i class="fas fa-user"></i> About Me</a>
                 </li>
                 <li class="nav-item active" data-toggle="tooltip" data-placement="bottom" title="This page contains all common commands how to work with git, every command is described">
                     <a class="nav-link" href="git-commands.html"><i class="fab fa-github"></i> Git Commands</a>
@@ -33,14 +33,13 @@
     </header>
 <!-- Add content -->
    <article>
-       <h1>These page is for presentation purposes</h1>
-       <aside>Git Commands</aside>
+       <h1>Welcome to my presentation page</h1>
        <iframe src="../pictures/github.png" width="100%" height="600" frameborder="0"></iframe>
    </article>
 
 <!-- Add footer -->
-    <div class="footer">
-        <p>2023 Inventi VJ</p>
+    <div class="footer-main">
+        <p>@2023 VJ</p>
     </div>
 
 <!-- Add Bootstrap JS -->
