--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <!-- Add Bootstrap CSS -->
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <!-- Add custom CSS -->
+    <!-- font awesome -->
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+            <link rel="stylesheet" href="style.css">
 
         </head>
     <body>
 <!-- Add header -->
-    <header class="header">
+    <header class="header-main">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Presentation WebPage</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#about-me">About Me</a>
+                    <a class="nav-link" href="#"><i class="fas fa-user"></i> About Me</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="git-commands.html">Git Commands</a>
+                <li class="nav-item active" data-toggle="tooltip" data-placement="bottom" title="This page contains all common commands how to work with git, every command is described">
+                    <a class="nav-link" href="git-commands.html"><i class="fab fa-github"></i> Git Commands</a>
                 </li>
             </ul>
         </div>
@@ -30,16 +33,23 @@
     </header>
 <!-- Add content -->
    <article>
-       <h1>These page is for presentation purposes</h1>
-       <aside>Git Commands</aside>
+       <h1>Welcome to my presentation page</h1>
        <iframe src="../pictures/github.png" width="100%" height="600" frameborder="0"></iframe>
    </article>
 
 <!-- Add footer -->
-
+    <div class="footer-main-dark">
+        <p>@2023-INVENTI-VJ</p>
+        <p>testing purposes</p>
+    </div>
 
 <!-- Add Bootstrap JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+        <script>
+                $(function () {
+                    $('[data-toggle="tooltip"]').tooltip()
+                })
+        </script>
     </body>
 </html>
