add facebook icon into footer

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <!-- Add footer -->
     <div class="footer-main-dark">
         <p>&copy; 2023 INVENTI-VJ</p>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener" class="text-white"><i class="fab fa-facebook fa-lg mx-3"></i></a>
     </div>
 
 <!-- Add Bootstrap JS -->
