--- a/index.html
+++ b/index.html
@@ -24,23 +24,33 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-user"></i> About Me</a>
                 </li>
-                <li class="nav-item active" data-toggle="tooltip" data-placement="bottom" title="This page contains all common commands how to work with git, every command is described">
-                    <a class="nav-link" href="git-commands.html"><i class="fab fa-github"></i> Git Commands</a>
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="This page contains all common commands how to work with github">
+                    <a class="nav-link" href="github.html"><i class="fab fa-github"></i> Git Commands</a>
+                </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a class="nav-link" href="git-commands.html"><i class="fab fa-git-alt"></i> Git Commands</a>
                 </li>
             </ul>
         </div>
     </nav>
     </header>
+
+
 <!-- Add content -->
-   <article>
-       <h1>Welcome to my presentation page</h1>
-       <iframe src="../pictures/github.png" width="100%" height="600" frameborder="0"></iframe>
-   </article>
+
+    <div class="container mt-5">
+        <h1>Welcome to my Homepage!</h1>
+        <a href="https://www.github.com/vasha33/vse"><p>Check out my latest GitHub repository:</p></a>
+        <iframe src="../pictures/github.png" width="100%" height="600" frameborder="0"></iframe>
+    </div>
+
 
 <!-- Add footer -->
-    <div class="footer-main-dark">
-        <p>&copy; 2023 INVENTI-VJ</p>
+    <div class="footer">
         <a href="https://www.facebook.com/" target="_blank" rel="noopener" class="text-white"><i class="fab fa-facebook fa-lg mx-3"></i></a>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="text-white"><i class="fab fa-instagram fa-lg mx-3"></i></a>
+        <a href="https://www.linkedin.com/" target="_blank" rel="noopener" class="text-white"><i class="fab fa-linkedin fa-lg mx-3"></i></a>
+        <p>&copy; 2023 INVENTI-VJ</p>
     </div>
 
 <!-- Add Bootstrap JS -->
