--- a/index.html
+++ b/index.html
@@ -25,22 +25,51 @@
                     <a class="nav-link" href="#"><i class="fas fa-user"></i> About Me</a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="This page contains all common commands how to work with github">
-                    <a class="nav-link" href="github.html"><i class="fab fa-github"></i> Git Commands</a>
+                    <a class="nav-link" href="github.html"><i class="fab fa-github"></i> Github</a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="">
-                    <a class="nav-link" href="git-commands.html"><i class="fab fa-git-alt"></i> Git Commands</a>
+                    <a class="nav-link" href="gitcommands.html"><i class="fab fa-git-alt"></i> Git Commands</a>
                 </li>
             </ul>
         </div>
     </nav>
     </header>
 
+<!-- Add carousel slider -->
 
+    <div class="carousel-container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="5000">
+                    <img src="../pictures/pexels-pixabay-417458.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="5000">
+                    <img src="../pictures/pexels-tim-gouw-52608 (1).jpg" height="" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="5000">
+                    <img src="../pictures/pexels-realtoughcandycom-11035547.jpg" height="" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
 <!-- Add content -->
 
     <div class="container mt-5">
         <h1>Welcome to my Homepage!</h1>
-        <a href="https://www.github.com/vasha33/vse"><p>Check out my latest GitHub repository:</p></a>
+        <a href="https://www.github.com/vasha33"><p>Check out my latest GitHub repository:</p></a>
         <iframe src="../pictures/github.png" width="100%" height="600" frameborder="0"></iframe>
     </div>
 
